--- a/Frontend/src/style/calculator.css
+++ b/Frontend/src/style/calculator.css
@@ -44,12 +44,21 @@
   padding: 12px 8px;
   font-size: 18px;
   height: 87px;
-  border: 1px Solid var(--grey)
+  word-wrap: break-word;
+  border: 1px Solid var(--grey);
+  overflow-y: auto
 }
 
 #result{
   margin: 12px 8px;
+  height: 22px;
   font-size: 18px;
   text-align: right;
   color: var(--grey)
+}
+
+.answer{
+  font-weight: bold;
+  color: var(--green);
+  font-size: 24px !important;
 }
